--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -62,3 +62,53 @@ body {
 h3 {
   margin: 0;
 }
+
+@media only screen and (max-width: 670px) {
+
+  body {
+    padding-top: 0;
+  }
+  
+  .title {
+    margin-top: 60px;
+    font-size: 40px;
+  }
+
+  audio {
+    width: 20%;
+    height: 30px;
+    margin-left: 50%;
+  }
+
+  .p {
+    font-size: 15px;
+  }
+
+  div img {
+    width: 15px;
+  }
+
+  .redes_text_title {
+    font-size: 40px;
+  }
+
+  .redes_text {
+    font-size: 20px;
+  }
+
+  .repositorios {
+    font-size: 65px;
+  }
+
+  
+  [title="mi_logo"] {
+    width: 200px;
+    margin: auto;
+    display: block;
+  }
+
+  .repositorios {
+    font-size: 50px;
+  }
+  
+}
