--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,17 @@ main {
 
 }
 
+footer {
+
+    display: block;
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+    border: 1px solid #000;
+    background-color: #fffd;
+
+}
+
 .p {
   font-size: 30px;
   text-align: justify;
@@ -77,7 +88,7 @@ main {
 .logo {
 
   width: 500px;
-  margin: auto;
   display: block;
+  margin: auto;
 
 }
