--- a/mis-redes/css/styles.css
+++ b/mis-redes/css/styles.css
@@ -83,5 +83,166 @@ footer {
   text-align: center;
 }
 
+@media (max-width: 1480px) {
 
+  ul {
 
+    padding: 20px 20px;
+
+  }
+
+  li a {
+
+    padding: 20px 150px;
+
+  }
+
+  main {
+
+    margin: 20px 100px 80px 50px;
+
+  }
+  
+}
+
+@media (max-width: 1300px) {
+
+  ul {
+
+    padding: 20px 20px;
+
+  }
+
+  li a {
+
+    padding: 20px 120px;
+
+  }
+  
+}
+
+@media (max-width: 1060px) {
+
+  ul {
+
+    padding: 20px 20px;
+
+  }
+
+  li a {
+
+    padding: 20px 90px;
+
+  }
+
+  main {
+
+    margin: 5px 60px 80px 50px
+
+  }
+  
+}
+
+@media (max-width: 880px) {
+
+  ul {
+
+    padding: 20px 20px;
+
+  }
+
+  li a {
+
+    padding: 20px 60px;
+
+  }
+
+}
+
+@media (max-width:680px) {
+
+  li a {
+
+    padding: 10px 30px;
+
+  }
+
+  main {
+
+    margin: 10px 50px 80px 50px;
+    padding: 40px;
+
+  }
+  
+}
+
+@media (max-width: 500px) {
+
+  li a {
+
+    display: block;
+    font-size: 20px;
+
+  }
+
+  nav {
+
+    margin-bottom: 10px;
+
+  }
+
+  main {
+
+    margin: 0;
+
+  }
+
+  .redes_subtitle {
+
+    font-size: 30px;
+
+  }
+
+}
+
+@media (max-width: 420px) {
+
+  main {
+
+    padding: 20px;
+
+  }
+
+}
+
+@media (max-width: 365px) {
+
+  .redes_title {
+
+    font-size: 70px;
+
+  }
+
+}
+
+@media (max-width: 320px) {
+
+  .redes_title {
+
+    font-size: 50px;
+
+  }
+
+  .redes_subtitle {
+
+    font-size: 20px;
+
+  }
+
+  .icons_redes {
+
+    width: 15px;
+
+  }
+  
+}
