--- a/mis-cursos/pensamiento-logico/css/styles.css
+++ b/mis-cursos/pensamiento-logico/css/styles.css
@@ -22,7 +22,7 @@ nav {
 .section-1 {
 
     margin: auto 250px;
-    padding: 100px 100px;
+    padding: 100px;
     padding-top: 70px;
     border: 1px solid #000;
     box-shadow: 15px 15px 50px #000;
@@ -30,7 +30,7 @@ nav {
 
 }
 
-h2 {
+h1 {
 
     font-size: 80px;
     font-family: 'Bowlby One SC', 'cursive';
@@ -86,5 +86,107 @@ footer {
     padding: 10px;
     border: 1px solid #000;
     background-color: #fffd;
+
+}
+
+@media (max-width: 1430px) {
+
+    h1 {
+
+        font-size: 60px;
+
+    }
+
+    .section-1 {
+
+        padding: 80px;
+        margin: auto 150px;
+
+    }
+
+}
+
+@media (max-width: 1250px) {
+
+    h1 {
+
+        font-size: 40px;
+
+    }
+
+    .section-1 {
+
+        padding: 50px;
+
+    }
+
+}
+
+@media (max-width: 1070px) {
+
+    h1 {
+
+        font-size: 30px;
+
+    }
+
+    iframe {
+
+        width: 600px;
+        height: 300px;
+
+    }
+
+}
+
+@media (max-width: 880px) {
+
+    h1 {
+
+        font-size: 30px;
+
+    }
+
+    iframe {
+
+        width: 400px;
+        height: 220px;
+
+    }
+
+    .section-1 {
+
+        margin: auto 50px;
+
+    }
+
+}
+
+@media (max-width: 480px) {
+
+    h1 {
+
+        font-size: 30px;
+
+    }
+
+    small {
+
+        font-size: 10px;
+
+    }
+
+    iframe {
+
+        width: 300px;
+        height: 180px;
+
+    }
+
+    .section-1 {
+
+        margin: auto 20px;
+
+    }
 
 }
