--- a/mis-cursos/css/styles.css
+++ b/mis-cursos/css/styles.css
@@ -30,6 +30,7 @@ li a {
   text-decoration: none;
   color: #fff;
   font-size: 25px;
+  font-family: 'Coiny', cursive;
   padding: 20px 150px;
   transition: background-color .2s;
 
@@ -56,7 +57,7 @@ main {
 
 }
 
-.buton {
+button, .buton {
     
   display: block;
   margin: auto;
@@ -141,9 +142,16 @@ main {
 
   }
 
+  button, .buton {
+
+    padding: 10px 20px;
+    font-size: 40px;
+
+  }
+
 }
 
-@media (max-width: 380px) {
+@media (max-width: 460px) {
 
   .buton {
 
@@ -153,7 +161,7 @@ main {
 
 }
 
-@media (max-width: 300px) {
+@media (max-width: 370px) {
 
   .buton {
 
