--- a/mis-redes/css/styles.css
+++ b/mis-redes/css/styles.css
@@ -30,6 +30,7 @@ li a {
   text-decoration: none;
   color: #fff;
   font-size: 25px;
+  font-family: 'Coiny', cursive;
   padding: 20px 150px;
   transition: background-color .2s;
 
