--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 * {
 
-  margin: auto;
-  padding: auto;
+  margin: 0;
+  padding: 0;
+  font-family: "Balsamiq Sans", "Cursive";
 
 }
 
@@ -13,9 +14,11 @@ nav {
 
 ul {
 
+  display: flex;
+  justify-content: space-evenly;
   background-color: #000;
-  padding: 20px 150px;
   text-align: center;
+  padding: 2vw;
 
 }
 
@@ -29,11 +32,9 @@ li a {
   
   text-decoration: none;
   color: #fff;
-  font-size: 25px;
+  font-size: 2vw;
   font-family: 'Coiny', cursive;
-  padding: 20px 150px;
-  transition: background-color .2s;
-
+  padding: 2vw;
 }
 
 li a:hover {
@@ -52,8 +53,8 @@ li a:active {
 }
 
 h1 {
-  margin: 80px auto 60px auto;
-  font-size: 80px;
+  margin: 2%;
+  font-size: 5.5vw;
   font-family: "Ballet", "Cursive";
   text-align: center;
   text-decoration: underline;
@@ -61,8 +62,8 @@ h1 {
 
 main {
 
-  margin: 20px 200px 50px;
-  padding: 50px 50px;
+  margin: 20px 5% 50px;
+  padding: 5%;
   border: 1px solid #000;
   box-shadow: 10px 10px 30px black;
 
@@ -74,7 +75,7 @@ footer {
     margin: auto;
     text-align: center;
     padding: 10px;
-    border: 1px solid #000;
+    outline: 1px solid #000;
     background-color: #fffd;
 
 }
@@ -88,181 +89,41 @@ footer {
 
 .logo {
 
-  width: 500px;
+  width: 60%;
   display: block;
   margin: auto;
 
 }
 
-@media (max-width: 1480px) {
-
-  ul {
-
-    padding: 20px 20px;
-
-  }
-
-  li a {
-
-    padding: 20px 150px;
-
-  }
-
-  main {
-
-    margin: 20px 100px 80px 50px;
-
-  }
-  
-}
-
-@media (max-width: 1300px) {
-
-  ul {
-
-    padding: 20px 20px;
-
-  }
-
-  li a {
-
-    padding: 20px 120px;
-
-  }
-  
-}
-
-@media (max-width: 1060px) {
-
-  ul {
-
-    padding: 20px 20px;
-
-  }
-
-  li a {
-
-    padding: 20px 90px;
-
-  }
+@media (max-width: 725px) {
 
   h1 {
 
-    font-size: 60px;
-    
-  }
-
-  main {
-
-    margin: 5px 60px 80px 50px
+    font-size: 10vw;
 
   }
-
+  
   .p {
 
-    font-size: 20px;
+    font-size: 4vw;
 
   }
-
-  .logo {
-
-    width: 200px;
-
-  }
-  
-}
-
-@media (max-width: 880px) {
 
   ul {
 
-    padding: 20px 20px;
+    flex-direction: column;
 
   }
 
-  li a {
+  li {
 
-    padding: 20px 60px;
-
-  }
-
-    h1 {
-
-    font-size: 50px;
     
+    margin: 10px auto;
+
   }
-
-}
-
-@media (max-width:680px) {
 
   li a {
-
-    padding: 10px 30px;
-
-  }
-
-  main {
-
-    margin: 10px 50px 80px 50px;
-    padding: 40px;
-
-  }
-
-  .p {
-
-    font-size: 15px;
-
-  }
-
-  .logo {
-
-    width: 100px;
-
-  }
-  
-}
-
-@media (max-width: 500px) {
-
-  li a {
-
-    display: block;
-    font-size: 20px;
-
-  }
-
-  h1 {
-
-    margin: 30px auto 30px auto;
-
-  }
-
-}
-
-@media (max-width: 420px) {
-
-  h1 {
-
-    font-size: 40px;
-
-  }
-
-  main {
-
-    margin: 10px 20px 80px 20px;
-    padding: 20px;
-
-  }
-
-}
-
-@media (max-width: 330px) {
-
-  h1 {
-
-    font-size: 30px;
-
+    font-size: 5vw;;
   }
 
 }
