--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,18 @@
 * {
-
   margin: 0;
   padding: 0;
   font-family: monospace;
-
 }
 
 html {
   scroll-behavior: smooth;
 }
 
-body {  
+body {
   background-color: #000;
 }
 
-header {
+.portada-container {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -34,12 +32,11 @@ header {
   border-radius: 5px;
   color: #fff;
   background-color: rgb(252, 105, 21);
-
 }
 
 .btn input:hover {
   cursor: pointer;
-  background-color: rgba(252, 105, 21, .9);
+  background-color: rgba(252, 105, 21, 0.9);
 }
 
 h1 {
@@ -47,11 +44,12 @@ h1 {
   text-decoration: underline;
 }
 
-h1, h2 {
+h1,
+h2 {
   margin-bottom: 15px;
 }
 
-.header-h {
+.portada {
   width: 35em;
   display: flex;
   flex-direction: column;
@@ -110,12 +108,12 @@ h1, h2 {
 }
 
 footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.5em;
-    padding: 20px 40px;
-    color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.5em;
+  padding: 20px 40px;
+  color: #fff;
 }
 
 .redes {
@@ -135,19 +133,16 @@ footer {
 }
 
 @media (max-width: 770px) {
-
-  header {
+  .portada-container {
     flex-direction: column-reverse;
-    margin-top: 20px;
   }
 
-  .header-h {
-    height: 60px;
+  .portada {
     align-items: center;
     margin-top: 20px;
   }
 
-  .header-h h1 {
+  .portada h1 {
     font-size: 2.2em;
   }
 
@@ -158,26 +153,24 @@ footer {
   .p {
     font-size: 1.3em;
   }
-
 }
 
 @media (max-width: 460px) {
-
-  .header-h {
+  .portada {
     width: auto;
     margin-right: 0;
   }
 
-  .header-h h1 {
+  .portada h1 {
     font-size: 2em;
   }
 
-  .header-h h2 {
+  .portada h2 {
     font-size: 1.3em;
   }
 
   .tecnologies {
-    font-size: .5em;
+    font-size: 0.5em;
   }
 
   .yo {
@@ -203,5 +196,4 @@ footer {
   .redes img {
     width: 20px;
   }
-
 }
