--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 
 .portada-container {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 150px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -64,8 +64,7 @@ h2 {
 
 .description {
   height: 70vh;
-  margin: 50px 0;
-  margin-right: 5%;
+  margin: 50px 5% 50px 0;
   display: flex;
   align-items: center;
   background-color: #fff;
@@ -132,6 +131,21 @@ footer {
   border-radius: 5px;
 }
 
+ul {
+  display: flex;
+  justify-content: end;
+  list-style: none;
+  margin: 40px;
+  padding: 0;
+}
+
+ul li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 20px;
+  font-size: 1.3em;
+}
+
 @media (max-width: 770px) {
   .portada-container {
     flex-direction: column-reverse;
@@ -153,6 +167,10 @@ footer {
   .p {
     font-size: 1.3em;
   }
+}
+
+@media (max-width: 591px) {
+  
 }
 
 @media (max-width: 460px) {
