--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,7 +14,7 @@ body {
 
 .portada-container {
   width: 100%;
-  height: calc(100vh - 150px);
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -139,11 +139,52 @@ ul {
   padding: 0;
 }
 
-ul li a {
+li a {
   color: #fff;
   text-decoration: none;
   padding: 0 20px;
   font-size: 1.3em;
+}
+
+li a:hover {
+  text-decoration: underline;
+}
+
+.nav-menu {
+  visibility: collapse;
+}
+
+#menu {
+  position: fixed;
+  z-index: 10;
+  top: 20px;
+  right: 20px;
+  font-size: 2em;
+  padding: 0;
+  margin: 0 10px;
+}
+
+#menu-check {
+  position: fixed;
+  z-index: 15;
+  top: 21px;
+  right: 29px;
+  width: 30px;
+  height: 30px;
+  opacity: 0;
+}
+
+header {
+  width: 100%;
+  height: 100px;
+  background-color: #000;
+  position: fixed;
+}
+
+nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 @media (max-width: 770px) {
@@ -170,7 +211,34 @@ ul li a {
 }
 
 @media (max-width: 591px) {
-  
+  .nav-menu {
+    visibility: visible;
+  }
+  nav li a {
+    color: #fff;
+    list-style: none;
+    font-size: 1em;
+  }
+  ul {
+    visibility: collapse;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    z-index: 5;
+    margin: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: #000d;
+  }
+  ul li {
+    margin-bottom: 50px;
+    font-size: 2.5em;
+  }
+  .portada-container {
+    height: 100vh;
+  }
 }
 
 @media (max-width: 460px) {
