--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -187,6 +187,23 @@ nav {
   align-items: center;
 }
 
+.proyects {
+  height: 70vh;
+  margin: 50px 0 50px 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 50% 0 0 50%;
+}
+
+.proyects h2 {
+  font-size: 3em;
+  text-align: center;
+  text-decoration: underline;
+  margin: 20px 0 40px 0;
+}
+
 @media (max-width: 770px) {
   .portada-container {
     flex-direction: column-reverse;
