--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,7 +25,7 @@ body {
   width: 130px;
 }
 
-.btn input {
+.btn input, .btn-site input, .btn-repo input {
   padding: 15px 20px;
   font-size: 1.2em;
   border: none;
@@ -187,21 +187,65 @@ nav {
   align-items: center;
 }
 
-.proyects {
-  height: 70vh;
-  margin: 50px 0 50px 5%;
+.proyects-container {
+  display: flex;
+  flex-direction: column;
+  margin: 50px 0 50px 2%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  border-radius: 50% 0 0 50%;
+  border-radius: 15% 0 0 15%;
 }
 
-.proyects h2 {
+.proyects-container h2 {
   font-size: 3em;
   text-align: center;
   text-decoration: underline;
   margin: 20px 0 40px 0;
+}
+
+.proyects {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.proyect {
+  width: 20em;
+  border-radius: 10px;
+  margin: 20px;
+  color: #fff;
+  background-color: #333;
+  padding: 20px;
+  font-size: 1.2em;
+}
+
+.proyect h3 {
+  margin-top: 10px
+}
+
+.proyect p {
+  margin: 20px 0;
+}
+
+.proyect img {
+  width: 100%;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn-site input, .btn-repo input {
+  cursor: pointer;
+  padding: 10px;
+}
+
+.btn-repo input {
+  background-color: #666;
 }
 
 @media (max-width: 770px) {
