--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,13 +80,12 @@ h2 {
 
 .tecnologies {
   background-color: #fff;
-  padding: 20px 0 40px 0;
+  padding: 80px 0 100px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 90vh;
 }
 
 .tecnologies h2 {
@@ -97,12 +96,14 @@ h2 {
 }
 
 .tecno-logos {
-  width: 25em;
+  width: 80%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .tecno-logos img {
+  margin: 20px;
   width: 100px;
 }
 
@@ -330,10 +331,6 @@ nav {
 
   .tecno-logos {
     justify-content: space-evenly;
-  }
-
-  .tecno-logos img {
-    width: 70px;
   }
 
   footer {
