--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -55,6 +55,7 @@ h2 {
   flex-direction: column;
   justify-content: space-between;
   margin-right: 2em;
+  text-align: center;
 }
 
 .yo {
@@ -282,17 +283,17 @@ nav {
     font-size: 1em;
   }
   ul {
-    visibility: collapse;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 0;
+    top: -100vh;
     z-index: 5;
     margin: 0;
     height: 100vh;
     width: 100%;
     background-color: #000d;
+    transition: top .5s;
   }
   ul li {
     margin-bottom: 50px;
