--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,6 +54,7 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   margin-right: 2em;
   text-align: center;
 }
